# sw_comparison

./: .gitignore  AVX-512BWsearch.h  AVX-512Fsearch.h  AVX2search.h  CMakeLists.txt  README.md  intSubmat.c  sequences.c  swimm2_avx2  swimm2_avx512bw  swimm2_avx512f  swimm2_knl_avx2  swimm2_knl_avx512f  swimm2_knl_sse41  swimm2_sse41  test.py  test.sh  test_info.sh  utils.c
implementations/ahmed2019/: CMakeLists.txt  README.md
implementations/ahmed2019/src/: ctors.cpp  gasal.h  res.cpp
implementations/ahmed2019/test_prog/: run_tests.sh  test_prog.cpp
implementations/bundled_software/ugene/: CMakeLists.txt  build.txt  source_url  ugene.pro
implementations/bundled_software/ugene/src/: Plugin.cmake  ugene_version.pri
implementations/david2011/: CMakeLists.txt  source_url
implementations/guidi2020/: CMakeLists.txt  source_url
implementations/guidi2020/benchmark/PyAligner/: README.md  setup.py
implementations/khajeh-saeed2010/: 0_Data_Generator.cu  1_Pairwise_Alignment-old.cu  1_Pairwise_Alignment.cu  2_Sequence_Extraction-old.cu  2_Sequence_Extraction.cu  3_Locating_Similar_Sequences.cu  4_Global_Alignment.cu  5_Multiple_Alignment.cu  CMakeLists.txt  Full_SW_CPU.cu  Kernel_1_CPU.cu  Kernel_1_Max_CPU.cu  Kernel_1_Max_CPU_MPI.cu  Kernel_2_CPU.cu  Kernel_2_Max_CPU_MPI.cu  Kernel_3_CPU.cu  Kernel_3_Max_CPU_MPI.cu  Kernel_4_CPU.cu  Kernel_5_CPU.cu  Main.cu  Main.linkinfo  SSCA-1.ncb  SSCA-1.sln  SSCA-1.vcproj  SW_kernel_1.cu  SW_kernel_2.cu  SW_kernel_3.cu  SW_kernel_4.cu  SW_kernel_5.cu  Scan_SW.cu  Scan_SW_kernel.cu  source_url  ss.cu  ss_kernel.cu
implementations/khajeh-saeed2010/cutil/: CMakeLists.txt
implementations/khajeh-saeed2010/cutil/src/: cutil.cpp
implementations/krommydas2016/: CMakeLists.txt  common_args.c  common_args.h  rdtsc.h  source_url  swat.cpp
implementations/liu2010/: .gitignore  CFastaFile.cpp  CFastaFile.h  CFastaSW.cu  CFastaSW.h  CFastaSWScalar.cu  CFastaSWScalar.h  CFastaSWVec.cu  CFastaSWVec.h  CMakeLists.txt  CParams.cpp  CParams.h  CSearch.cu  CSearch.h  CSearchMGPUScalar.cu  CSearchMGPUScalar.h  CSearchMGPUVec.cu  CSearchMGPUVec.h  CSearchScalar.cu  CSearchScalar.h  CSearchVec.cu  CSearchVec.h  GenericFunction.cu  GenericFunction_cu.h  Makefile  main.cu
implementations/liu2013/: CMakeLists.txt  Makefile
implementations/liu2013/src/: AlignerInlines.h  CFastaFile.cpp  CFastaFile.h  CSearch.cu  CSearchMGPUScalar.cu  CSearchScalar.cu
implementations/liu2014b_cushaw2_gpu/: .cproject  .project  Aligner.cpp  Aligner.h  BWT.cpp  BWT.h  Bitmap.h  CMakeLists.txt  CigarAlign.cpp  CigarAlign.h  GPUBWT.cu  GPUBWT.h  GPUMacros.h  GPUMemEngine.cu  GPUMemEngine.h  GPUSA.cu  GPUSA.h  GPUSW.cu  GPUSW.h  GPUSeeds.cu  GPUSeeds.h  GPUUtils.cu  GPUUtils.h  GPUVariables.cu  GPUVariables.h  Genome.cpp  Genome.h  MGPUwrapper.cu  Macros.h  Makefile  Mapping.h  MemEngine.cpp  MemEngine.h  MyFile.h  Options.cu  Options.h  PairedEnd.cu  PairedEnd.h  SAM.cpp  SAM.h  (+15 more)
implementations/liu2014b_cushaw2_gpu/Debug/: makefile  objects.mk  sources.mk  subdir.mk
implementations/liu2014b_cushaw2_gpu/Debug/bamreader/: subdir.mk
implementations/liu2014b_cushaw2_gpu/Debug/objs/: subdir.mk
implementations/liu2014b_cushaw2_gpu/Debug/src/: subdir.mk
implementations/liu2014b_cushaw2_gpu/bamreader/: Makefile  bgzf.c
implementations/liu2014b_cushaw2_gpu/cushaw2_index/: Makefile  bwtindex.c  main.c  main.h
implementations/luo2013/: .gitignore  CMakeLists.txt  DV-SemiDP.cu  Makefile
implementations/luo2013/2bwt-lib/: Socket.c
implementations/luo2013/samtools-0.1.18/: bgzf.c  razf.c
implementations/manavski2008/: CMakeLists.txt
implementations/manavski2008/cudakernels/: .gitignore  comp_cu.sh  cutil.h  e2g_consts.h  e2g_hndlscan.cu  e2g_kernel_1.h  e2g_krlconsts.h  e2g_krlscan.h  e2g_krlscanhashed.h  handler_solexa.cu  sbtmatrix.h  smithwaterman.cu  smithwaterman_kernel.cu  sw_kernel2.cu  sw_kernel3.cu  sw_kernel4.h  sw_kernel5.h  sw_kernel6.h  sw_kernel6_global.h  sw_kernel7.h  sw_kernel7_global.h  sw_kernel_txt_1.h  swhandler4.cu  swhandler4global.cu  swhandler5.cu  swhandler6_global.cu  swhandler7_global.cu  swhandlerprof.cu  swhandlertxt.cu  swkernelprof1.h  swkernels.pro  swsse2_def.h  swutils.h
implementations/manavski2008/gpubiolib/: ConfigFile.cpp  ConfigFile.h  Doxyfile  alignmentpair.cpp  alignmentpair.h  biosequence.cpp  biosequence.h  e2gengine.cpp  e2gengine.h  gpubiolib.kdevelop  gpubiolib.kdevelop.pcs  gpubiolib.kdevses  gpubiolib.pro  handler_solexa.cpp  handler_solexa.h  shortsequencescache.cpp  shortsequencescache.h
implementations/manavski2008/swcuda/: Doxyfile  swcuda.kdevelop  swcuda.kdevelop.pcs  swcuda.kdevses
implementations/masa/: CMakeLists.txt
implementations/masa/masa-core/: source_url
implementations/masa/masa-cudalign/: .gitignore  build.titan  source_url
implementations/masa/masa-openmp/: source_url
implementations/masa/masa-serial/: README.md  source_url
implementations/muller2020/anyseq/: CMakeLists.txt
implementations/okada2015/: .gitignore  CMakeLists.txt
implementations/okada2015/swsharp/: Makefile  README  source_url
implementations/pankaj2012/: CMakeLists.txt  source_url
implementations/pankaj2012/src/: common.h  main.cu  smithWaterman.cu
implementations/rognes2011/: .gitignore  CMakeLists.txt  search7.cc  source_url  swipe.cc  swipe.h
implementations/rucci2015/: CMakeLists.txt  CPUsearch.c  HETsearch.c  MICsearch.c  arguments.c  sequences.c  source_url  swimm.c  utils.c
implementations/rucci2018b/: AVX2search.c  CMakeLists.txt  SSE41search.c  SSE41search.h  charSubmat.h
implementations/striemer2009/: CMakeLists.txt  Info.txt  source_url
implementations/striemer2009/SmithWaterman/: SmithWaterman.cu  SmithWaterman.ncb  SmithWaterman.sln  SmithWaterman.vcproj  SmithWaterman_gold.cpp  SmithWaterman_kernel.cu  SmithWaterman_kernel.cuh  SmithWaterman_vc7.ncb  SmithWaterman_vc7.sln  SmithWaterman_vc7.vcproj
implementations/warris2015/PaSWAS/: CMakeLists.txt  smithwaterman.cu
implementations/zhao2013/: CMakeLists.txt  source_url
implementations/zhao2013/src/: .gitignore  main.c
(+10513 files in other folders)
